<resources>
    <string name="app_name">Events</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="add">Add</string>
    <string name="map">Map</string>
    <string name="my_cal">My Calendar</string>
    <string name="my_fav">My Favourites</string>
    <string name="my_tkcts">My Tickets</string>
    <string name="free">Free</string>
    <string name="help_center">Help Center</string>
    <string name="privacy">Privacy</string>
    <string name="terms_condi">Terms &amp; Conditions</string>
    <string name="about_text">Milan Fashion Week is an innovative calendar that coordinates the Milanese showroom openings for sales of MAIN COLLECTION Men, women and children with the aim of responding to the changing demands of the market and an audience of industry professionals increasingly demanding.\n\nMilan Fashion Main collects in an official list of appointments exhibition and sale of the major brands of prêt-à-porter presented in the showrooms of designers and fashion companies. Two annual events : Fall ( January / February ) and Summer ( June / July ) .\n\nSupporting Milan Fashion Week, the National Chamber of Italian Fashion strengthens leadership, confirming Milan as an essential reference for the sector , both in terms of creativity and quality , and in terms of trade and business. Milan is in fact a unique worldwide with more than 1,000 showrooms (mono and multi brand ).\n\nA major media campaign requires the presence of the calendar of Milano Moda Week on the most popular Italian newspapers and magazines on foreigners, as well as banners on websites and portals of national and international information.\n\nAn effective campaign online marketing and advertising channels on YouTube, Google AdWords and Facebook strengthens the communication event. On the website of the CNMI is a large area dedicated to this event, which proves to be a great platform support for both international buyers to the showrooms participating in the initiative.\n\nYou can visit virtually every showroom , a preview of the collections presented the lookbook, download the press release and the press release.</string>
    <string name="share">Share</string>
    <string name="add_to_fav">Add to favourites</string>
    <string name="remove_fav">Remove from favourites</string>
    <string name="msg_add_fav">Event added to favourites</string>
    <string name="msg_rem_fav">Event removed from favourites</string>
    <string name="date">Date</string>
    <string name="dots">............................................................................................................................................................................................................................................................................................................................................................................................................</string>
    <string name="description">Description</string>
    <string name="free_event">Free Event</string>
    <string name="reg_now">Register Now</string>
    <string name="alert_loading">Loading...</string>
    <string name="err_unexpect">Sorry, An unexpected error occurred. Please make sure that you are connected to internet and than try again!</string>
    <string name="err_internet">Network Connection has been lost</string>
    <string name="msg_no_content">No content found!</string>
    <string name="alert_wait">Please wait...</string>
    <string name="today">Today</string>
    <string name="err_no_space">Sorry, All the seats are booked now. No space available.</string>
    <string name="err_past_event">Sorry, You can\'t book the past events!</string>
    <string name="err_event_booked">You have already booked this Event.</string>
    <string name="programs">Programs</string>
    <string name="feed">Feed</string>
    <string name="my_prog">My Programs</string>
    <string name="member_resources">Member Resources</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="email">"Email "</string>
    <string name="pwd">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment</string>
    <string name="booking_spce">Booking Spaces:</string>
    <string name="submit">Submit</string>
    <string name="price">Price:</string>
    <string name="alert_login">Signing in...</string>
    <string name="err_field_empty">Please fill all the fields.</string>
    <string name="err_email">Please enter valid email address.</string>
    <string name="book_ticket">Book Event</string>
    <string name="msg_event_book_success">Event has been successfully booked.</string>
    <string name="help_centre_text">If you have trouble with Event app, please email MyAppTemplates.</string>
    <string name="send_email">Send Email</string>
    <string name="help_email_subject">Event App Android Question</string>
    <string name="privacy_text">What information do we collect?\nWe collect information from you when you register on our site, place an order or subscribe to our newsletter.\nWhen ordering or registering on our site, as appropriate, you may be asked to enter your: name, e-mail address, mailing address, phone number or credit card information. You may, however, visit our site anonymously\nWhat do we use your information for?\nAny of the information we collect from you may be used in one of the following ways:\nTo personalize your experience – (your information helps us to better respond to your individual needs)\nTo improve our website – (we continually strive to improve our website offerings based on the information and feedback we receive from you)\nTo improve customer service – (your information helps us to more effectively respond to your customer service requests and support needs)\nTo process transactions\nTo administer a contest, promotion, survey or other site feature\nTo send periodic emails\nThe email address you provide for order processing, may be used to send you information and updates pertaining to your order, in addition to receiving occasional company news, updates, related product or service information, etc.Note: If at any time you would like to unsubscribe from receiving future emails, we include detailed unsubscribe instructions at the bottom of each email.\nYour information, whether public or private, will not be sold, exchanged, transferred, or given to any other company for any reason whatsoever, without your consent, other than for the express purpose of delivering the purchased product or service requested.\nHow do we protect your information?\nWe implement a variety of security measures to maintain the safety of your personal information when you place an order or enter, submit, or access your personal information.\nWe offer the use of a secure server. All supplied sensitive/credit information is transmitted via Secure Socket Layer (SSL) technology and then encrypted into our Payment gateway providers database only to be accessible by those authorized with special access rights to such systems, and are required to keep the information confidential.\nAfter a transaction, your private information will not be stored on our servers.\nDo we use cookies?\nYes (Cookies are small files that a site or its service provider transfers to your computers hard drive through your Web browser (if you allow) that enables the sites or service providers systems to recognize your browser and capture and remember certain information\nWe use cookies to help us remember and process the items in your shopping cart, understand and save your preferences for future visits and compile aggregate data about site traffic and site interaction so that we can offer better site experiences and tools in the future.\nDo we disclose any information to outside parties?\nWe do not sell, trade, or otherwise transfer to outside parties your personally identifiable information. This does not include trusted third parties who assist us in operating our website, conducting our business, or servicing you, so long as those parties agree to keep this information confidential. We may also release your information when we believe release is appropriate to comply with the law, enforce our site policies, or protect ours or others rights, property, or safety. However, non-personally identifiable visitor information may be provided to other parties for marketing, advertising, or other uses.\nThird party links\nOccasionally, at our discretion, we may include or offer third party products or services on our website. These third party sites have separate and independent privacy policies. We therefore have no responsibility or liability for the content and activities of these linked sites. Nonetheless, we seek to protect the integrity of our site and welcome any feedback about these sites.\nCalifornia Online Privacy Protection Act Compliance\nBecause we value your privacy we have taken the necessary precautions to be in compliance with the California Online Privacy Protection Act. We therefore will not distribute your personal information to outside parties without your consent.\nAs part of the California Online Privacy Protection Act, all users of our site may make any changes to their information at anytime by logging into the ‘My Account’ panel and editing details on the page.\nChildrens Online Privacy Protection Act Compliance\nWe are in compliance with the requirements of COPPA (Childrens Online Privacy Protection Act), we do not collect any information from anyone under 13 years of age. Our website, products and services are all directed to people who are at least 13 years old or older.\nOnline Privacy Policy Only\nThis online privacy policy applies only to information collected through our website and not to information collected offline.\nYour Consent\nBy using our site, you consent to our privacy policy.\nChanges to our Privacy Policy\nIf we decide to change our privacy policy, we will post those changes on this page, and/or update the Privacy Policy modification date below.</string>
</resources>