<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/pad_20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_spce"
            android:textColor="@color/main_color_gray_dk"
            android:textSize="@dimen/txt_14sp" />

        <Spinner
            android:id="@+id/spinSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_10dp"
            tools:listitem="@android:layout/simple_spinner_item" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/pad_10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/main_color_gray_dk"
            android:textSize="@dimen/txt_14sp" />

        <TextView
            android:id="@+id/lblPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:textSize="@dimen/txt_14sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/txtComment"
        style="@style/txt_orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_10dp"
        android:gravity="top"
        android:hint="@string/comment"
        android:inputType="none"
        android:lines="3"
        android:textColor="@color/black" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_20dp" >

        <Button
            android:id="@+id/btnSubmit"
            style="@style/btn_orange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/btn_orange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>