<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/pad_20dp" >

    <EditText
        style="@style/txt_orange"
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        >

        <requestFocus />
    </EditText>

    <EditText
        style="@style/txt_orange"
        android:id="@+id/txtPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_10dp"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_20dp" >

        <Button
            android:id="@+id/btnLogin"
            style="@style/btn_orange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnReg"
            style="@style/btn_orange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:layout_weight="1"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>