<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/help"
            style="@style/lbl_more2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_center" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />

        <TextView
            android:id="@+id/privacy"
            style="@style/lbl_more2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />

        <TextView
            android:id="@+id/terms"
            style="@style/lbl_more2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_condi" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider"
            android:background="@color/main_color_gray1" />
    </LinearLayout>

</ScrollView>
